<resources>
    <string name="app_name">Grocery_App</string>
    <string name="login">Login</string>
    <string name="userlogin">userLogin</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="password">Password</string>
    <string name="not_have_account">Not have account ?</string>
    <string name="register_user">Register User</string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="are_you_a_seller">Are you a seller ?</string>
    <string name="register_as_seller">Register as seller</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="Gps">Gps</string>
    <string name="enter_full_name">Enter Full name</string>
    <string name="shop_name">Shop Name</string>
    <string name="register_seller">Register Seller</string>
    <string name="register">Register</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="recover_password">Recover Password</string>
    <string name="back">Back</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_product">Add Product</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="update">Update</string>
    <string name="open">Open</string>
    <string name="discount">Discount</string>
    <string name="quantity">Quantity</string>
    <string name="discount_price">Discount Price</string>
    <string name="discount_note">Discount Note</string>
    <string name="product">Products</string>
    <string name="orders">Orders</string>
    <string name="search">Search ...</string>
    <string name="_10_off">10% off</string>
    <string name="_10">$10</string>
    <string name="_20">$20</string>
    <string name="showing_all">Showing All</string>
    <string name="product_detail">Product Detail</string>
    <string name="product_title">Product Title</string>
    <string name="the_product_description">The Product Description</string>
    <string name="edit_product">Edit Product</string>
    <string name="update_product">Update Product</string>
    <string name="closed">Closed</string>
    <string name="shop_details">Shop Details</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="finalPrice">finalPrice</string>
    <string name="_1">1</string>
    <string name="_0_0">0.0</string>
    <string name="order_to">Order to</string>
    <string name="sub_total">Sub Total :</string>
    <string name="delivery_fee_1">Delivery Fee :</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="_10_kg">10/KG</string>
    <string name="_2">[2]</string>
    <string name="remove">Remove</string>
    <string name="order_12345">Order : 12345</string>
    <string name="_27_06_2001">27/06/2001</string>
    <string name="hi_anhhanhh">Hi_Anhhanhh</string>
    <string name="in_process">In Process</string>
    <string name="total_amount_500">Total Amount : $500</string>
    <string name="order_details">Order Details</string>
    <string name="orderid">OrderId :</string>
    <string name="write_review">Write Review</string>
    <string name="how_was_your_experience_this_seller_n_your_feedback_is_important_to_improve_our_quantity_of_service">How was your experience this seller ? \n your feedback is important to improve our quantity of service</string>
    <string name="type_review">Type ReView ...</string>
    <string name="submit">Submit</string>
    <string name="shop_reviews">Shop Reviews</string>
    <string name="_4_3_100_200_333">4.3 [100,200,333]</string>
    <string name="name">Name</string>
    <string name="anhh">27/06/2001</string>
    <string name="this_is_good_product">This is good product</string>
</resources>