<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProductDetailsSellerActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shape_rect01"
        android:padding="7dp">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_ios_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/product_detail"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/deleteBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="@color/transparent"
            android:src="@drawable/baseline_delete_24" />

        <ImageButton
            android:id="@+id/editBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toStartOf="@id/deleteBtn"
            android:background="@color/transparent"
            android:src="@drawable/baseline_edit_24" />


    </RelativeLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/productSiv"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:src="@drawable/baseline_add_shopping_cart_24_white"
        android:background="@drawable/shape_rect03"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productSiv"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/discountedNoteTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10_off"
            android:padding="3dp"
            android:textSize="16sp"
            android:textColor="@color/red"
            android:background="@drawable/shape_rect_05"/>

        <TextView
            android:id="@+id/productTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_title"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_product_description"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/productCatrgory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/productQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <TextView
                android:id="@+id/discountedPriceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/_10"/>

            <TextView
                android:id="@+id/originalPriceTv"
                android:layout_toEndOf="@+id/discountedPriceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20" />


        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>