<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="3dp"
    app:contentPadding="5dp"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/orderIdTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_12345"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/nextIv"
            android:text="@string/_27_06_2001"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/shopNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi_anhhanhh"
            android:layout_below="@+id/orderIdTv"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/amountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount_500"
            android:layout_below="@+id/shopNameTv"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/nextIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_chevron_right_24" />


        <TextView
            android:id="@+id/statusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_process"
            android:layout_below="@id/shopNameTv"
            android:layout_toStartOf="@id/nextIv"
            android:textColor="@color/green"/>


    </RelativeLayout>


</androidx.cardview.widget.CardView>