<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/itemRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_transparent_1"
        android:padding="5dp">

        <TextView
            android:id="@+id/titleItemTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/itemPriceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:layout_below="@id/titleItemTv"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/titleItemTv">

            <TextView
                android:id="@+id/itemPriceEachTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/_10_kg"/>

            <TextView
                android:id="@+id/itemQuantityTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/_2"
                android:layout_marginStart="5dp"/>

        </LinearLayout>


        <TextView
            android:id="@+id/removeItemTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:textColor="@color/red"
            android:layout_below="@id/titleItemTv"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/itemPriceTv"
            android:layout_marginTop="5dp"
            android:background="@color/green"/>

    </RelativeLayout>


    
</RelativeLayout>