<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="3dp"
    app:contentPadding="2dp"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/itemRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/titleItemTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textStyle="bold" />



        <TextView
            android:id="@+id/itemPriceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:layout_below="@id/titleItemTv"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/titleItemTv">

            <TextView
                android:id="@+id/itemPriceEachTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/_10_kg"/>

            <TextView
                android:id="@+id/itemQuantityTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/_2"
                android:layout_marginStart="5dp"/>

        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>