<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/Rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/toolBarRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rect01">

            <TextView
                android:id="@+id/discountedNoteTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_off"
                android:padding="3dp"
                android:textSize="18sp"
                android:textColor="@color/red"
                android:background="@drawable/shape_rect_05"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageProductSiv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/shape_circle_02"
                android:src="@drawable/baseline_add_shopping_cart_24_white"
                android:scaleType="fitCenter"
                android:layout_centerHorizontal="true"
                app:shapeAppearance="@style/Circular"
                android:layout_marginTop="5dp"/>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/imageProductSiv"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <TextView
                    android:id="@+id/productTitleTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/quantityTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/descriptionTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/description"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/priceRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_below="@+id/toolBarRl">

            <TextView
                android:id="@+id/originalPriceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/_20"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/discountedPriceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/originalPriceTv"
                android:text="@string/_10"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/finalPriceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/_0_0"
                android:layout_alignParentEnd="true"
                android:textColor="@color/black" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/countLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/priceRl"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/incrementBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:background="@color/transparent"
                android:src="@drawable/baseline_remove_circle_outline_24" />

            <TextView
                android:id="@+id/countTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/decrementBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:background="@color/transparent"
                android:src="@drawable/baseline_control_point_24" />




        </LinearLayout>

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/Rl"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/add_to_cart"
        android:textSize="20sp"
        android:textAllCaps="false"/>

</RelativeLayout>