<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="3dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/productImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/baseline_add_shopping_cart_24_colorprimary"
            android:background="@drawable/shape_rect02"
            android:scaleType="fitCenter"/>

        <LinearLayout
            android:id="@+id/infoProductLl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/productImage"
            android:layout_marginStart="5dp">

            <TextView
                android:id="@+id/discountedNoteTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_off"
                android:padding="3dp"
                android:textSize="16sp"
                android:textColor="@color/red"
                android:background="@drawable/shape_rect_05"/>

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/black"
                android:layout_marginTop="3dp"/>

            <TextView
                android:id="@+id/quantityTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textColor="@color/black"
                android:layout_marginTop="3dp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp">

                <TextView
                    android:id="@+id/discountedPriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/_10"/>

                <TextView
                    android:id="@+id/originalPriceTv"
                    android:layout_toEndOf="@+id/discountedPriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_20" />


            </RelativeLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_chevron_right_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>