<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ShopReviewActivity">

    <RelativeLayout
        android:id="@+id/toolBarRl"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/shape_rect01">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/shop_reviews"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_ios_24" />
    </RelativeLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shopImageSiv"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/toolBarRl"
        android:layout_marginTop="10dp"
        app:shapeAppearance="@style/Circular"
        android:background="@drawable/shape_circle02"
        android:src="@drawable/baseline_store_24"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/shopNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_name"
        android:layout_below="@id/shopImageSiv"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:layout_centerHorizontal="true"/>

    <RatingBar
        android:id="@id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shopNameTv"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/ratingTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4_3_100_200_333"
        android:layout_below="@id/ratingBar"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reviewRec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ratingTv"
        tools:listitem="@layout/row_user_review"/>

</RelativeLayout>